# TDD_EmbeddedC_HomeAutomation

./: CMakeLists.txt  README.md
include/HomeAutomation/: HomeAutomation.h  LightController.h  LightControllerSpy.h  LightScheduler.h  RandomMinute.h  TimeService.h
include/IO/: Flash.h  IO.h  MicroTime.h  m28w160ect.h
include/util/: CircularBuffer.h  Utils.h
mocks/: CMakeLists.txt  FakeMicroTime.c  FakeMicroTime.h  FormatOutputSpy.c  FormatOutputSpy.h  FormatOutputSpyTest.cpp  MockIO.c  MockIO.h
src/: CMakeLists.txt
src/HomeAutomation/: LightControllerSpy.c  LightScheduler.c  RandomMinute.c
src/IO/: Flash.c  IO.c
src/util/: CircularBuffer.c  Utils.c
tests/: CMakeLists.txt  RunAllTests.cpp
tests/HomeAutomation/: FakeRandomMinute.c  FakeRandomMinute.h  FakeTimeService.c  FakeTimeService.h  FakeTimeServiceTest.cpp  LightControllerSpy.c  LightControllerSpy.h  LightControllerSpyTest.cpp  LightSchedulerRandomizeTest.cpp  LightSchedulerTest.cpp  RandomMinuteTest.cpp
tests/IO/: FlashTest.cpp  FlashTest_CppUMock.cpp
tests/util/: CircularBufferPrintTest.cpp
